--- a/index.html
+++ b/index.html
@@ -97,23 +97,26 @@
                                 <div class="time">Oct. 2023 – Present</div>
                             </div>
                             <div class="job-title">Membership Advisor</div>
-                            <div class="job-title">Surpassed Sales Targets and Drove Revenue Growth with Innovative Prospecting:</div>
                             <ul>
-                                <li>  Exceeded monthly and quarterly quota targets, leading to a remarkable 40% expansion of the client base and a substantial 30% increase in revenue.
+                                <li>  Surpassed sales targets and drove revenue growth through implementing personalized outreach campaigns, multi-channel communication strategies, leveraging client referrals, and partnering with local businesses
                                     </li>
-                                        <li> Pioneered groundbreaking prospecting methods, resulting in enhanced market penetration and increased sales revenue.
+                                        <li> Exceeded monthly and quarterly quota targets, expanded client base by 40%, and increased revenue by 30% through utilization of email marketing, cold calling, and targeted social media advertisement.
                                     </li>
-                                        <li> Demonstrated skills: Strategic planning, innovative thinking, market analysis.
-                                            <li>  Exceeded monthly and quarterly quota targets, leading to a remarkable 40% expansion of the client base and a substantial 30% increase in revenue.
+                                        <li> Generated new leads and diversified market penetration by pioneering innovative prospecting methods, including collaborating with Fortune 500 companies; increased membership and sales growth by 17% through application of consultative selling techniques.
+                                        </li>
+                                            <li>  Accomplished a 25% closing rate at initial meetings through use of consultative selling techniques to build trust and position correct organizational features with client needs.
                                             </li>
-                                                <li> Pioneered groundbreaking prospecting methods, resulting in enhanced market penetration and increased sales revenue.
+                                                <li> Invest in colleagues and provide coaching and advice when presented with opportunities for improvement.
                                             </li>
-                                                <li> Demonstrated skills: Strategic planning, innovative thinking, market analysis.
+                                                <li> Create reliable forecasts and champion transparency with management on pipeline statuses to support efficiency and business growth; develop and circulate best practices to serve as the foundation for various cross-functional teams.
+                                                </li>
                                                     <li>  Exceeded monthly and quarterly quota targets, leading to a remarkable 40% expansion of the client base and a substantial 30% increase in revenue.
                                                     </li>
-                                                        <li> Pioneered groundbreaking prospecting methods, resulting in enhanced market penetration and increased sales revenue.
+                                                        <li> Understand business needs through data analysis, research, interviews, etc. to identify and predict strategic issues; ideate and execute on feasible recommendations to stakeholders.
                                                     </li>
-                                                        <li> Demonstrated skills: Strategic planning, innovative thinking, market analysis.
+                                                        <li> Work effectively in a fast-paced, complex, and matrixed environment filled with tight deliverable timeframes and multiple stakeholders
+                                                            Surpassed sales targets and drove revenue growth through implementing personalized outreach campaigns, multi-channel communication strategies, leveraging client referrals, and partnering with local businesses. 
+
                             </ul>
                         </div>
 
