--- a/index.html
+++ b/index.html
@@ -104,19 +104,17 @@
                                     </li>
                                         <li> Generated new leads and diversified market penetration by pioneering innovative prospecting methods, including collaborating with Fortune 500 companies; increased membership and sales growth by 17% through application of consultative selling techniques.
                                         </li>
+                                        <li> Achieved 50% sales growth and a 20% increase in club membership within a 6 month period.
+                                        </li>
                                             <li>  Accomplished a 25% closing rate at initial meetings through use of consultative selling techniques to build trust and position correct organizational features with client needs.
                                             </li>
                                                 <li> Invest in colleagues and provide coaching and advice when presented with opportunities for improvement.
                                             </li>
                                                 <li> Create reliable forecasts and champion transparency with management on pipeline statuses to support efficiency and business growth; develop and circulate best practices to serve as the foundation for various cross-functional teams.
                                                 </li>
-                                                    <li>  Exceeded monthly and quarterly quota targets, leading to a remarkable 40% expansion of the client base and a substantial 30% increase in revenue.
-                                                    </li>
                                                         <li> Understand business needs through data analysis, research, interviews, etc. to identify and predict strategic issues; ideate and execute on feasible recommendations to stakeholders.
                                                     </li>
                                                         <li> Work effectively in a fast-paced, complex, and matrixed environment filled with tight deliverable timeframes and multiple stakeholders
-                                                            Surpassed sales targets and drove revenue growth through implementing personalized outreach campaigns, multi-channel communication strategies, leveraging client referrals, and partnering with local businesses. 
-
                             </ul>
                         </div>
 
