--- a/index.html
+++ b/index.html
@@ -124,13 +124,11 @@
                                 <div class="time">May. 2023 – Oct. 2023</div>
                             </div>
                             <div class="job-title">Technical Recruiter</div>
-                            <div class="job-title">Optimized Candidate Quality and Recruitment Efficiency:</div>
                             <ul>
-                                <li>Implemented precision-targeted sourcing strategies, securing five pivotal placements and establishing a robust pipeline of top-tier candidates.
+                                <li> Secured 5 pivotal placements, achieved a 50% improvement in candidate match rates, reduced time-to-hire by 20%, optimized candidate quality, and enhanced recruitment efficiency by 25% through implementation of precision-targeted sourcing strategies and provision of data-driven insights regarding customer segmentation and headcount planning.
                                     </li>
-                                        <li>Developed and maintained recruitment dashboards to ensure data integrity and provide regular performance reports to leadership.
-                                    </li>
-                                        <li>Achieved a 50% improvement in candidate match rates and a 20% reduction in time-to-hire.
+                                        <li>Streamlined feedback process time and enhanced decision-making by facilitating feedback loops between candidates and interviewers.
+                                         
                             </ul>
                         </div>
 
