--- a/index.html
+++ b/index.html
@@ -137,12 +137,21 @@
                                 <h3 class="company">US Navy Talent Acquisition Group (NTAG) San Francisco / Mountain View, CA</h3>
                                 <div class="time">Jan. 2019 – May. 2023</div>
                             </div>
-                            <div class="job-title">Command Trainer For Sales and Business Challenges</div>
-                                    <h3 class="job-title">Revolutionized CRM Integration and Data Management:</h3>
+                            <div class="job-title">Command Trainer Recruiting Coordinator / Training Managers</div>
                                     <ul>
-                                        <li>Led the seamless integration of Salesforce CRM and developed recruitment dashboards.</li>
-                                        <li>Resulted in a 15% increase in hiring manager satisfaction and customized metrics for over 200 NTAG personnel.</li>
-                                        <li>Demonstrated skills: Project management, CRM integration, dashboard development.</li>
+                                        <li>Increased Senior Recruiters and Account Executives satisfaction by 15% and revolutionized CRM integration and data management through integration of Salesforce CRM and development of 5 multi-level recruitment dashboards.
+                                        </li>
+                                        <li>Increased sales by 30%, optimized operational efficiency and accuracy,  and achieved #1 ranking among 26 teams nationally by conducting thorough hiring needs analysis and market research and providing sales and marketing consulting to C-level stakeholders.
+                                        </li>
+                                        <li>Accomplished a market take of 34% through oversight of critical operational processes, including quota management audits, and territory allocation.
+                                        </li>
+                                        <li>Delivered comprehensive reports, maintained accurate data checks, and provided key insights to inform decision making; tracked business performance and provided strategic recommendations to advise leadership on forecasting, operational decisions, strategy, and planning processes.
+                                        </li>
+                                        <li>Oversaw specific departments, led training programs, and developed recruiting staff to ensure they met required standards and performance metrics.
+                                        </li>
+                                        <li>Customized metrics (sales and recruiting KPIs, closing rates, etc.) for 200+ NTAG personnel. 
+                                        </li>
+
                                     </ul>
                                     <h3 class="job-title">Drove Sales Growth Through Strategic Analysis:</h3>
                                     <ul>
