--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
                         <div class="job">
                             <div class="upper-row">
-                                <h3 class="company">US Navy Talent Acquisition Group (NTAG) San Francisco / Mountain View, CA</h3>
+                                <h3 class="company">US Navy Talent Acquisition Group (NTAG) San Francisco, CA</h3>
                                 <div class="time">Jan. 2019 – May. 2023</div>
                             </div>
                             <div class="job-title">Command Trainer Recruiting Coordinator / Training Managers</div>
@@ -151,13 +151,6 @@
                                         </li>
                                         <li>Customized metrics (sales and recruiting KPIs, closing rates, etc.) for 200+ NTAG personnel. 
                                         </li>
-
-                                    </ul>
-                                    <h3 class="job-title">Drove Sales Growth Through Strategic Analysis:</h3>
-                                    <ul>
-                                        <li>Conducted thorough hiring needs analysis and market research, providing sales and marketing consulting to C-level stakeholders.</li>
-                                        <li>Resulted in a 30% sales increase and achieving #1 of 26 teams nationally in 2023.</li>
-                                        <li>Demonstrated skills: Strategic analysis, market research, consulting.</li>
                                     </ul>
 
 
@@ -165,21 +158,22 @@
                         </div>
                         <div class="job" style="margin-bottom:-15px;"> 
                             <div class="upper-row">
-                                <h3 class="company">US Navy Talent Acquisition Group (NTAG) / Mountain View, CA</h3>
+                                <h3 class="company">US Navy Talent Acquisition Group (NTAG) San Francisco, CA</h3>
                                 <div class="time">Jan. 2020 – Jan. 2022</div>
                             </div>
-                            <div class="job-title">Talent Acquisition Team Lead</div>
-                                            <h3 class="job-title">Innovatively Enhanced Recruitment Strategies:</h3>
+                            <div class="job-title">Talent Acquisition Senior Recruiters / Account Executives</div>
                                             <ul>
-                                                <li>Applied creative thinking to the recruitment process, resulting in a significant 33% surge in specialized placements in 2021.</li>
-                                                <li>Managed the full lifecycle recruitment for over 400 candidates annually in the medical, engineering and other highly skilled fields, maintaining an exceptional 65% closing rate of qualified candidates.</li>
-                                                <li>Demonstrated skills: Creative problem-solving, recruitment management, time management.</li>
-                                            </ul>
-                                            <h3 class="job-title">Streamlined Recruitment Operations:</h3>
-                                            <ul>
-                                                <li>Spearheaded operational processes for the recruitment team, including developing data checks and recruitment metric maintenance.</li>
-                                                <li>Ensured efficiency and accuracy in recruitment operations through a streamlined approach.</li>
-                                                <li>Demonstrated skills: Operational leadership, process optimization, data management.</li>
+                                                <li>Boosted specialized placements by 33% within 1 year through social media prospecting, network development, and continuous coaching of 8 recruiter team leads and 24 recruiters.</li>
+                                                <li>Oversaw sales managers throughout the Bay Area as well as full lifecycle recruitment for 400+ candidates annually, achieving an attrition rate of 4% before boot camp; ensured targets were met through daily agile sprints and thorough onboarding of all candidates from initial interview to final placement.
+                                                </li>
+                                                <li>Reduced time-to-hire by ~40% and streamlined recruitment operations through adoption of data-driven recruitment strategy.
+                                                </li>
+                                                <li>Achieved 110% of yearly recruitment goal by spearheading operational processes for the recruitment team, including developing data checks and recruitment metric maintenance.</li>
+                                                </li>
+                                                <li>Transformed underperforming team from not meeting recruitment targets in 11+ months to consistently meeting or surpassing yearly goals.</li>
+                                                <li>Provided strategic, data-driven market insights and customer segmentation recommendations to sales leadership, which supported organizational decision-making and best practices improvement.
+                                                </li>
+                                                         
                             </ul>
 
 
