--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
                         <div class="job">
                             <div class="upper-row">
-                                <h3 class="company">US Navy Talent Acquisition Group (NTAG) San Francisco, CA</h3>
+                                <h3 class="company">US Navy Talent Acquisition Group San Francisco / Mountain View, CA</h3>
                                 <div class="time">Jan. 2019 – May. 2023</div>
                             </div>
                             <div class="job-title">Command Trainer Recruiting Coordinator / Training Managers</div>
@@ -158,7 +158,7 @@
                         </div>
                         <div class="job" style="margin-bottom:-15px;"> 
                             <div class="upper-row">
-                                <h3 class="company">US Navy Talent Acquisition Group (NTAG) San Francisco, CA</h3>
+                                <h3 class="company">US Navy Talent Acquisition Group San Francisco / San Francisco, CA</h3>
                                 <div class="time">Jan. 2020 – Jan. 2022</div>
                             </div>
                             <div class="job-title">Talent Acquisition Senior Recruiters / Account Executives</div>
@@ -182,18 +182,14 @@
                                 <h3 class="company">US Navy Recruiting District Chicago	Chicago / Chicago, IL</h3>
                                 <div class="time">Jan. 2016 – Dec. 2019</div>
                             </div>
-                            <div class="job-title">Talent Acquisition Team Lead</div>
-                                            <h3 class="job-title">Strategically Led Recruitment Team and Enhanced Performance:</h3>
+                            <div class="job-title">Talent Acquisition Senior Recruiters / Account Executives</div>
                                             <ul>
-                                                <li>Orchestrated leadership for a team of 26 recruiters, surpassing targets by 150%.</li>
-                                                <li>Identified strengths and development areas, optimizing team performance.</li>
-                                                <li>Demonstrated skills: Leadership, strategic planning, performance analysis.</li>
-                                            </ul>
-                                            <h3 class="job-title">Implemented Diverse Recruiting Methods and Provided Data-Driven Insights:</h3>
-                                            <ul>
-                                                <li>Implemented various recruiting methods, resulting in a 30% increase in candidate quality.</li>
-                                                <li>Provided data-driven insights to advise leadership, enabling informed decision-making.</li>
-                                                <li>Demonstrated skills: Innovative thinking, data analysis, strategic decision support.</li>
+                                                <li>Led team to increase recruitment 25% from the previous year, surpassing targets by 150% through strategic oversight of 6 recruiter team leads and 20 recruiters.</li>
+                                                <li>Increased candidate quality 30% by innovating and diversifying recruitment processes, utilizing historical market data, and training recruiters.
+                                                </li>
+                                                <li>Identified strengths and development areas to optimize team performance, providing monthly briefs to C-suite regarding various KPIs; leveraged data-driven insights to advise leadership and inform decision-making.
+                                                </li>
+                                                <li>Served as senior enlisted leader overseeing multiple recruiting stations within a geographic zone, exhibiting leadership skills and ensuring that recruiters met their goals.</li>
                             </ul>
 
 
