--- a/index.html
+++ b/index.html
@@ -74,12 +74,16 @@
 
                         <div class="school">
                             <div class="upper-row">
-                                <h3 class="school-name">University of San Francisco</h3>
+                                <h3 class="school-name">University of San Francisco, San Fracisco</h3>
                                 <div class="time">Graduation - Dec. 2025</div>
                             </div>
                             <div class="school-title">MBA, GPA 4.0 / 4.0</div>
 
                             <b>Relevant Coursework:</b> Enterprise Software Development, Entrepreneurial Marketing, Analytics, and Sales
+                            <h3 class="school-name">Pennsyvania State University / University Park</h3>
+                            <div class="time">Aug 2015 - Aug 2022</div>
+                        </div>
+                        <div class="school-title">MBA, GPA 3.5 / 4.0</div>
                         </div>
                     </section>
 
@@ -245,13 +249,13 @@
                         </h2>
                         <h3><abbr title="Association for Computing Machinery">Production Awards</abbr></h3>
                         <ul>
-                            <li>Talent Acquisition Team Lead of the Year FY21 - San Francisco, CA</li>
-                            <li>Talent Acquisition Team Lead of the Year FY17 - Chicago, IL</li>
-                            <li>Technical Recruiter of the Year FY15 - San Mateo, CA</li>
+                            <li>Talent Acquisition Team Lead of the Year FY21, U.S. Navy</li>
+                            <li>Talent Acquisition Team Lead of the Year FY17, U.S. Navy</li>
+                            <li>Technical Recruiter of the Year FY15 , U.S. Navy</li>
                         </ul>
                         <h3>Other Awards</h3>
                         <ul>
-                            <li>Military Outstanding Volunteer Service Medal - US Navy – 2010</li>
+                            <li>Military Outstanding Volunteer Service Medal 2010, U.S. Navy</li>
                         </ul>
                     </section>
 
