--- a/index.html
+++ b/index.html
@@ -74,16 +74,13 @@
 
                         <div class="school">
                             <div class="upper-row">
-                                <h3 class="school-name">University of San Francisco, San Fracisco</h3>
+                                <h3 class="school-name">University of San Francisco</h3>
                                 <div class="time">Graduation - Dec. 2025</div>
                             </div>
                             <div class="school-title">MBA, GPA 4.0 / 4.0</div>
 
                             <b>Relevant Coursework:</b> Enterprise Software Development, Entrepreneurial Marketing, Analytics, and Sales
-                            <h3 class="school-name">Pennsyvania State University / University Park</h3>
-                            <div class="time">Aug 2015 - Aug 2022</div>
-                        </div>
-                        <div class="school-title">MBA, GPA 3.5 / 4.0</div>
+                            
                         </div>
                     </section>
 
