--- a/index.html
+++ b/index.html
@@ -40,8 +40,17 @@
                         <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/arturo-revelo/">arturo-revelo</a></li>
                     </ul>
                     <p>Analytical, detail-oriented, and results-driven sales and recruitment professional with demonstrated experience guiding sales operations, managing quotas, and leading diverse, cross-functional teams. Proven track record of exceeding revenue and volume targets, increasing market share, and improving profit margins through strategic insights and data-driven recommendations. Adept at fostering mutually-beneficial relationships and leveraging in-depth market analysis to support long-term planning, forecasting, and budgeting. Seeking roles related to sales, recruitment, and business development and analysis.</p>
-                    <p>Python • SaaS • People Analytics • Business Intelligence • Account Management • Change Management • Strategic Planning • Agile Methodologies • Product Marketing • Sales Management • Project Management • Marketing Strategy • Customer Relationship Management (CRM) Software • Microsoft Office Suite (Microsoft Word, Microsoft Excel, Microsoft PowerPoint) • Advanced Sales / Closing Methodology • Salesforce • Outreach • LinkedIn • Lever • SQL • SWOT Market Analysis • Forecasting • Pipeline Development • Business Development • Data Mining • Data Analytics • Data Delivery • Research • Problem Solving • Social Media</p>
-                    <b>Languages:</b> English (Fluent), Spanish (Fluent)
+                    <section>
+                        <h2 class="section-title">
+                            <span class="fa-stack fa-xs">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fas fa-briefcase fa-stack-1x fa-inverse"></i>
+                            </span>
+                            Skills
+                        </h2>
+                        <p>Python • SaaS • People Analytics • Business Intelligence • Account Management • Change Management • Strategic Planning • Agile Methodologies • Product Marketing • Sales Management • Project Management • Marketing Strategy • Customer Relationship Management (CRM) Software • Microsoft Office Suite (Microsoft Word, Microsoft Excel, Microsoft PowerPoint) • Advanced Sales / Closing Methodology • Salesforce • Outreach • LinkedIn • Lever • SQL • SWOT Market Analysis • Forecasting • Pipeline Development • Business Development • Data Mining • Data Analytics • Data Delivery • Research • Problem Solving • Social Media</p>
+                        <b>Languages:</b> English (Fluent), Spanish (Fluent)
+                    </section>
                 </header>
             </div>
 
